--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,4 @@ steps:
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/whoaks/AzurePipeline4/main/SC/LT_Storage.json'
     deploymentMode: Incremental
-    deploymentName: 'MyFirstDeployment'
+    deploymentName: 'myfirstdeployment'
