Arm template deployment using devops pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
     location: 'East US'
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/whoaks/AzurePipeline4/main/SC/LT_Storage.json'
-    deploymentMode: Incremental
+    deploymentMode: 'Incremental'
     deploymentName: 'myfirstdeployment'
