--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,13 @@ pool:
 steps:
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
-    deploymentScope: 'Resource Group'
-    azureResourceManagerConnection: 'aksarmsp'
+    deploymentScope: Resource Group
+    azureResourceManagerConnection: aksarmsp
     subscriptionId: 3280ff72-14fc-46dd-809e-ccee75183a87
-    action: 'Create Or Update Resource Group'
-    resourceGroupName: 'Aks-RG2'
-    location: 'East US'
-    templateLocation: 'URL of the file'
-    csmFileLink: 'https://raw.githubusercontent.com/whoaks/AzurePipeline4/main/SC/LT_Storage.json'
-    deploymentMode: 'Incremental'
-    deploymentName: 'myfirstdeployment'
+    action: Create Or Update Resource Group
+    resourceGroupName: Aks-RG2
+    location: East US
+    templateLocation: URL of the file
+    csmFileLink: https://raw.githubusercontent.com/whoaks/AzurePipeline4/main/SC/LT_Storage.json
+    deploymentMode: Incremental
+    deploymentName: myfirstdeployment
